Main container style bug
Main container content was being overlapped by fixed footer. Added padding to fix.

--- a/src/sass/layouts/_main.scss
+++ b/src/sass/layouts/_main.scss
@@ -1,26 +1,24 @@
 .main-container {
-  margin-top: 80px;
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 0 25px;
+  padding: 80px 25px 50px 25px;
 }
 
 @media screen and (min-width: 480px) {
   .main-container {
-    padding: 0 35px;
-    margin-top: 85px;
+    padding: 85px 35px 85px 35px;
   }
 }
 
 @media screen and (min-width: 768px) {
   .main-container {
-    margin-top: 160px;
+    padding-top: 160px;
   }
 }
 
 @media screen and (min-width: 1200px) {
   .main-container {
-    margin-top: 140px;
+    padding-top: 140px;
   }
 }
